crates/aihu-css-core/tests/snapshots/progressive_snapshot__anchor_snapshot.snap
---
source: crates/aihu-css-core/tests/progressive_snapshot.rs
assertion_line: 60
expression: "compile_sfc_scoped(&sfc(\"anchor:tooltip\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
@supports (anchor-name: --a) {
  .anchor\:tooltip { anchor-name: --tooltip; position-anchor: --tooltip; }
}
/* aihu:progressive-fallback anchorFallback (when not @supports anchor-name: --a) */
