crates/aihu-css-core/tests/snapshots/progressive_snapshot__text_balance_snapshot.snap
---
source: crates/aihu-css-core/tests/progressive_snapshot.rs
assertion_line: 101
expression: "compile_sfc_scoped(&sfc(\"text-balance:\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
.text-balance { text-wrap: balance; }
