crates/aihu-css-core/tests/snapshots/progressive_snapshot__view_transition_snapshot.snap
---
source: crates/aihu-css-core/tests/progressive_snapshot.rs
assertion_line: 39
expression: "compile_sfc_scoped(&sfc(\"view-transition:hero\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
@supports (view-transition-name: none) {
  .view-transition\:hero { view-transition-name: hero; }
}
